--- a/testapp/src/main/res/layout/activity_test_playback_service.xml
+++ b/testapp/src/main/res/layout/activity_test_playback_service.xml
@@ -28,7 +28,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:onClick="testSetMedia"
-			android:text="Set media"/>
+			android:text="Set media to next in queue"/>
 
 		<Button
 			android:layout_width="wrap_content"
